--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,7 @@
 services:
   db:
     image: postgres:alpine
-    restart: on-failure
-
-    healthcheck:
-      test: ["CMD", "pg_isready -U postgres"]
-      interval: 30s
-      timeout: 10s
-      retries: 10
-
+    restart: always
     ports:
       - "5432:5432"
     env_file:
