--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=${DB_PASS}
       - POSTGRES_DB=${DB_NAME}
     volumes:
-      - ./data:/var/lib/postgresql/data/
+      - db_data:/var/lib/postgresql/data/
 
   api:
     container_name: "dag_api"
@@ -35,3 +35,5 @@ services:
 
 volumes:
   dage-data:
+  db_data:
+    driver: local
