--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,17 +21,17 @@ services:
       - "8080:8080"
     depends_on:
       - db
-      - redis
+
     volumes:
       - dage-data:/app
 
-  redis:
-    image: redis
-    container_name: "dag_api_redis"
-    ports:
-      - "6379:6379"
-    volumes:
-      - .data/db:/data
+  # redis:
+  #   image: redis
+  #   container_name: "dag_api_redis"
+  #   ports:
+  #     - "6379:6379"
+  #   volumes:
+  #     - .data/db:/data
 
 volumes:
   dage-data:
