--- a/data/postgresql.conf
+++ b/data/postgresql.conf
@@ -78,11 +78,11 @@ max_connections = 100			# (change requires restart)
 # - TCP settings -
 # see "man tcp" for details
 
-#tcp_keepalives_idle = 0		# TCP_KEEPIDLE, in seconds;
+# tcp_keepalives_idle = 600	# TCP_KEEPIDLE, in seconds;
 					# 0 selects the system default
-#tcp_keepalives_interval = 0		# TCP_KEEPINTVL, in seconds;
+# tcp_keepalives_interval = 30		# TCP_KEEPINTVL, in seconds;
 					# 0 selects the system default
-#tcp_keepalives_count = 0		# TCP_KEEPCNT;
+# tcp_keepalives_count = 10		# TCP_KEEPCNT;
 					# 0 selects the system default
 #tcp_user_timeout = 0			# TCP_USER_TIMEOUT, in milliseconds;
 					# 0 selects the system default
@@ -696,7 +696,7 @@ log_timezone = UTC
 #session_replication_role = 'origin'
 #statement_timeout = 0			# in milliseconds, 0 is disabled
 #lock_timeout = 0			# in milliseconds, 0 is disabled
-#idle_in_transaction_session_timeout = 0	# in milliseconds, 0 is disabled
+e_in_transaction_session_timeout = 0	# in milliseconds, 0 is disabled
 #idle_session_timeout = 0		# in milliseconds, 0 is disabled
 #vacuum_freeze_table_age = 150000000
 #vacuum_freeze_min_age = 50000000
