🐉 update docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
       - POSTGRES_DB=${DB_NAME}
-#    command: postgres -c tcp_keepalives_idle=60 -c tcp_keepalives_interval=10
+    command: postgres -c tcp_keepalives_idle=60 -c tcp_keepalives_interval=10
     volumes:
       - db_data:/var/lib/postgresql/data/
 
